# amira_learning_task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  llm.py  main.py  prompt.txt  pyproject.toml
examples/: expeditions.json  exploration.json  exploration_low.json  goverment_low.json  government_high.json  remaining_low.json  scientific_high.json  scientific_low.json
